# Coursework_6_DRF_application

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml
.github/workflows/: ci.yml
Coursework_6_DRF/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
habit_tracker/: admin.py  models.py  serializers.py  tests.py  urls.py  validators.py  views.py
habit_tracker/migrations/: 0001_initial.py  0002_initial.py
nginx/: nginx.conf
users/: admin.py  models.py  permissions.py  serializer.py  services.py  tasks.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_telegram_nickname_alter_user_tg_chat_id.py  0003_alter_user_telegram_nickname.py
